JN-13 fix issue with error handling, add native functions